syntax = "proto3";

package sample.kv;

option java_package = "sample.kv";
option java_outer_classname = "KVApi";

service KVService {
	rpc SetValue(SetValueRequest) returns (SetValueResponse) {}
	
	rpc GetValue(GetValueRequest) returns (GetValueResponse) {}
}

message SetValueRequest {
	string key = 1;
	string value = 2;
}

message SetValueResponse {
}

message GetValueRequest {
	string key = 1;
}

message GetValueResponse {
	string value = 1;
}